--- a/openatlas/templates/model/index.html
+++ b/openatlas/templates/model/index.html
@@ -1,48 +1,51 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}<a href="/model">{{ _('model')|uc_first }}</a>{% endblock %}
 {% block body %}
-    <p>
-        <a href="/model/class">{{ _('classes')|uc_first }}</a> -
-        <a href="/model/property">{{ _('properties')|uc_first }}</a>
-    </p>
     <div style="float:left">
         <a href="/static/images/model/openatlas_schema.png">
             <img src="/static/images/model/openatlas_schema.png" style="width:500px" alt="OpenAtlas schema" />
         </a>
     </div>
-    <div style="float:left">
+    <div style="float:left;margin-left:1em;">
+        <p>
+            {{ _('browse')|uc_first }}: <a href="/model/class">{{ _('classes')|uc_first }}</a>,
+            <a href="/model/property">{{ _('properties')|uc_first }}</a>
+        </p>
         <p style="font-weight: bold;">{{ _('check for valid links')|uc_first }}</p>
         <form method="post">
             {{ form.csrf_token }}
             {% set data = [
-                {form.domain.label: form.domain},
-                {form.property.label: form.property},
-                {form.range.label: form.range},
+                {form.domain.label: form.domain|string + 'domain'|table_select_model('domain')},
+                {form.property.label: form.property|string + 'property'|table_select_model('property')},
+                {form.range.label: form.range|string + 'range'|table_select_model('range')},
             ] %}
             {{ data|data_table()|safe }}
             <input type="submit" value="{{ _('test')|uc_first }}" />
         </form>
+        {% if test_result: %}
+            <p style="margin-top:1em;">
+                {{ _('result for')|uc_first }}
+                {{ test_result['domain']|link|safe }} >
+                {{ test_result['property']|link|safe }} >
+                {{ test_result['range']|link|safe }}
+            </p>
+            <p>
+                {% if not test_result['domain_error'] and not test_result['range_error'] %}
+                    Valid link<br/>
+                {% endif %}
+                {% if test_result['domain_error'] %}
+                    <span class="error">{{ _('wrong domain') }}</span>
+                    {{ test_result['domain']|link|safe }} {{ _('for') }} {{ test_result['property']|link|safe }}<br/>
+                {% endif %}
+                {% if test_result['range_error'] %}
+                    <span class="error">{{ _('wrong range') }}</span>
+                    {{ test_result['range']|link|safe }} {{ _('for') }} {{ test_result['property']|link|safe }}<br/>
+                {% endif %}
+
+                {% if test_result['domain_whitelisted']: %}
+                    {{ test_result['domain']|link|safe }} {{ _("as domain is white listed and won't checked") }}
+                {% endif %}
+            </p>
+        {% endif %}
     </div>
-    {% if test_result: %}
-        <p>
-            {{ _('result') }}
-            {{ test_result['domain']|link|safe }} > {{ test_result['property']|link|safe }} > {{ test_result['range']|link|safe }}
-        </p>
-        <p>
-            {% if test_result['domain_error'] %}
-                <span class="error">{{ _('wrong domain') }}</span>
-                {{ test_result['domain']|link|safe }} {{ _('for') }} {{ test_result['property']|link|safe }}<br/>
-            {% endif %}
-            {% if test_result['range_error'] %}
-                <span class="error">{{ _('wrong range') }}</span>
-                {{ test_result['range']|link|safe }} {{ _('for') }} {{ test_result['property']|link|safe }}<br/>
-            {% endif %}
-            {% if not test_result['domain_error'] and not test_result['range_error'] %}
-                Valid link<br/>
-            {% endif %}
-            {% if test_result['domain_whitelisted']: %}
-                {{ test_result['domain']|link|safe }} {{ _("as domain is white listed and won't checked") }}
-            {% endif %}
-        </p>
-    {% endif %}
 {% endblock %}
