--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -60,6 +60,10 @@ div.mce-tinymce {
     display: table-cell;
 }
 
+input.table-select {
+    cursor: pointer;
+}
+
 .message {
     font-size: 0.7em;
     font-weight: normal;
