--- a/openatlas/templates/index/contact.html
+++ b/openatlas/templates/index/contact.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}<a href="/">{{ _('overview')|uc_first }}</a> > {{ _('contact')|uc_first }}{% endblock %}
+{% block breadcrumb %}{{ _('contact')|uc_first }}{% endblock %}
 {% block body %}
     {{ contact|safe }}
 {% endblock %}
