--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}<a href="/">{{ _('overview')|uc_first }}</a> > {{ _('credits')|uc_first }}{% endblock %}
+{% block breadcrumb %}{{ _('credits')|uc_first }}{% endblock %}
 {% block body %}
     <h1>Team</h1>
     <p>
