--- a/openatlas/templates/index/faq.html
+++ b/openatlas/templates/index/faq.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}<a href="/">{{ _('overview')|uc_first }}</a> > {{ _('faq')|uc_first }}{% endblock %}
+{% block breadcrumb %}{{ _('faq')|uc_first }}{% endblock %}
 {% block body %}
     {{ faq|safe }}
 {% endblock %}
