--- a/openatlas/templates/model/index.html
+++ b/openatlas/templates/model/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}<a href="/model">{{ _('model')|uc_first }}</a>{% endblock %}
+{% block breadcrumb %}{{ _('model')|uc_first }}{% endblock %}
 {% block body %}
     <div style="float:left">
         <a href="/static/images/model/openatlas_schema.png">
