--- a/openatlas/templates/content/index.html
+++ b/openatlas/templates/content/index.html
@@ -2,6 +2,6 @@
 {% block breadcrumb %}
     {{ _('content')|uc_first }}
 {% endblock %}
-{% block body %}
+{% block content %}
     {{ table_content|pager|safe }}
 {% endblock %}
