--- a/openatlas/templates/content/view.html
+++ b/openatlas/templates/content/view.html
@@ -2,7 +2,7 @@
 {% block breadcrumb %}
     <a href="/content">{{ _('content')|uc_first }}</a> > {{ item|uc_first }}
 {% endblock %}
-{% block body %}
+{% block content %}
     <div class="button-bar">
         <a href="/content/update/{{ item }}">{{ _('edit')|uc_first }}</a>
     </div>
