--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('credits')|uc_first }}{% endblock %}
-{% block body %}
+{% block content %}
     <h1>Team</h1>
     <p>
         <strong>Stefan Eichert</strong><br />
