--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('overview')|uc_first }}{% endblock %}
-{% block body %}
+{% block content %}
     <div>{{ intro|safe }}</div>
     <div>
         <p>
