--- a/openatlas/templates/model/class_view.html
+++ b/openatlas/templates/model/class_view.html
@@ -4,7 +4,7 @@
     <a href="/model/class">{{ _('classes')|uc_first }}</a> >
     {{ class_.code }}
 {% endblock %}
-{% block body %}
+{% block content %}
     <div style="float:left;padding-right:2em;">
         <p><strong>{{ _('info')|uc_first }}</strong></p>
         {% set data = [
