--- a/openatlas/templates/settings/update.html
+++ b/openatlas/templates/settings/update.html
@@ -2,7 +2,7 @@
 {% block breadcrumb %}
     <a href="/settings">{{ _('settings')|uc_first }}</a> > {{ _('edit')|uc_first }}
 {% endblock %}
-{% block body %}
+{% block content %}
     <form method="post">
     <div class="button-bar">
         <input type="submit" value="{{ _('save')|uc_first }}" />
