--- a/openatlas/templates/event/index.html
+++ b/openatlas/templates/event/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('event')|uc_first }}{% endblock %}
-{% block body %}
+{% block content %}
 
 {% endblock %}
