--- a/openatlas/templates/index/changelog.html
+++ b/openatlas/templates/index/changelog.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('changelog')|uc_first }}{% endblock %}
-{% block body %}
+{% block content %}
     {% for version_name, version in versions.iteritems() %}
         <div class="changelog-version">{{ _('version')|uc_first }} {{ version_name }}</div>
         <div class="changelog-date">{{ version['date'] }}</div>
