--- a/openatlas/templates/index/contact.html
+++ b/openatlas/templates/index/contact.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('contact')|uc_first }}{% endblock %}
-{% block body %}
+{% block content %}
     {{ contact|safe }}
 {% endblock %}
