--- a/openatlas/templates/index/faq.html
+++ b/openatlas/templates/index/faq.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('faq')|uc_first }}{% endblock %}
-{% block body %}
+{% block content %}
     {{ faq|safe }}
 {% endblock %}
