--- a/openatlas/templates/model/index.html
+++ b/openatlas/templates/model/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('model')|uc_first }}{% endblock %}
-{% block body %}
+{% block content %}
     <div style="float:left">
         <a href="/static/images/model/openatlas_schema.png">
             <img src="/static/images/model/openatlas_schema.png" style="width:500px" alt="OpenAtlas schema" />
