--- a/openatlas/templates/place/index.html
+++ b/openatlas/templates/place/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('source')|uc_first }}{% endblock %}
-{% block body %}
+{% block content %}
 
 {% endblock %}
