--- a/openatlas/templates/settings/index.html
+++ b/openatlas/templates/settings/index.html
@@ -2,7 +2,7 @@
 {% block breadcrumb %}
     {{ _('settings')|uc_first }}
 {% endblock %}
-{% block body %}
+{% block content %}
     <div class="button-bar">
         <a href="/settings/update">{{ _('edit')|uc_first }}</a>
     </div>
