--- a/openatlas/templates/source/index.html
+++ b/openatlas/templates/source/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('source')|uc_first }}{% endblock %}
-{% block body %}
-
+{% block content %}
+    <div class="button-bar"><a href="/source/insert/E33">+ {{ _('source')|uc_first }}</a></div>
 {% endblock %}
