added 404, refactored url for static

--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -29,22 +29,22 @@
     <h1>Funding</h1>
     <p>Development was and is funded by several projects, grants, institutes and departments:</p>
     <a href="https://oeaw.academia.edu/MappingMedievalConflict" onclick="window.open(this.href);return false;">
-        <img src="{{ url_for('static', filename='images/sponsors/logo_medcon.png') }}" alt="MEDCON" />
+        <img src="/images/sponsors/logo_medcon.png" alt="MEDCON" />
     </a>
     <a href="http://dpp.oeaw.ac.at/" onclick="window.open(this.href);return false;">
-        <img src="{{ url_for('static', filename='images/sponsors/logo_dpp.png') }}" alt="DPP" />
+        <img src="/images/sponsors/logo_dpp.png" alt="DPP" />
     </a>
     <a href="http://www.oeaw.ac.at/imafo/" onclick="window.open(this.href);return false;">
-        <img src="{{ url_for('static', filename='images/sponsors/logo_imafo.gif') }}" alt="IMAFO" />
+        <img src="/images/sponsors/logo_imafo.gif" alt="IMAFO" />
     </a><br/><br/>
     <a href="http://www.oeaw.ac.at/en/austrian-academy-of-sciences/" onclick="window.open(this.href);return false;">
-        <img src="{{ url_for('static', filename='images/sponsors/logo_oeaw.png') }}" alt="ÖAW" />
+        <img src="/images/sponsors/logo_oeaw.png" alt="ÖAW" />
     </a>
     <a href="http://homepage.univie.ac.at/stefan.eichert/gkn/" onclick="window.open(this.href);return false;">
-        <img src="{{ url_for('static', filename='images/sponsors/logo_frontier.png') }}" alt="Frontier, Contact Zone or No Man's Land" />
+        <img src="/images/sponsors/logo_frontier.png" alt="Frontier, Contact Zone or No Man's Land" />
     </a>
     <a href="https://www.fwf.ac.at/en/" onclick="window.open(this.href);return false;">
-        <img src="{{ url_for('static', filename='images/sponsors/logo_fwf.png') }}" alt="FWF Austrian Science Fund" />
+        <img src="/images/sponsors/logo_fwf.png" alt="FWF Austrian Science Fund" />
     </a>
     <p>
         <a href="http://www.oeaw.ac.at/imafo/arbeitsgruppen/fruehmittelalter/projekte-historische-identitaetsforschung/einzelprojekte/ostalpenraum-revisited/"
