--- a/openatlas/static/css/images.css
+++ b/openatlas/static/css/images.css
@@ -4,7 +4,7 @@
     float: left;
     width: 370px;
     margin-bottom: 1em;
-    background-image: url('/static/images/layout/logo.png');
+    background-image: url('/images/layout/logo.png');
     background-repeat: no-repeat;
 }
 
@@ -14,35 +14,35 @@
 }
 
 table.tablesorter thead tr .tablesorter-header {
-    background-image: url("/static/images/icons/arrow_updown.png");
+    background-image: url("/images/icons/arrow_updown.png");
     background-position: right 0.4em top 0.4em;
     background-repeat: no-repeat;
     cursor: pointer;
 }
 
 div.pager div.first {
-    background-image: url("/static/images/icons/first.png");
+    background-image: url("/images/icons/first.png");
 }
 div.pager div.first:hover {
-    background-image: url("/static/images/icons/first_hover.png");
+    background-image: url("/images/icons/first_hover.png");
 }
 div.pager div.prev {
-    background-image: url("/static/images/icons/prev.png");
+    background-image: url("/images/icons/prev.png");
 }
 div.pager div.prev:hover {
-    background-image: url("/static/images/icons/prev_hover.png");
+    background-image: url("/images/icons/prev_hover.png");
 }
 div.pager div.next {
-    background-image: url("/static/images/icons/next.png");
+    background-image: url("c/images/icons/next.png");
 }
 div.pager div.next:hover {
-    background-image: url("/static/images/icons/next_hover.png");
+    background-image: url("/images/icons/next_hover.png");
 }
 div.pager div.last {
-    background-image: url("/static/images/icons/last.png");
+    background-image: url("/images/icons/last.png");
 }
 div.pager div.last:hover {
-    background-image: url("/static/images/icons/last_hover.png");
+    background-image: url("/images/icons/last_hover.png");
 }
 
 table.tablesorter thead tr .sorter-false, table.tablesorter thead tr .sorter-false:hover {
