added html language tag

--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ session['language'] }}">
     <head>
         <meta charset="UTF-8" />
         <meta name="theme-color" content="#ffffff" />
