--- a/openatlas/templates/index/changelog.html
+++ b/openatlas/templates/index/changelog.html
@@ -8,8 +8,10 @@
             {% for issue_type, issues in version['data'].iteritems() %}
                 {% for issue_number, issue_text in issues.iteritems() %}
                     {% if issue_number %}
-                        &#8226 {{ issue_type|uc_first }} <a href="http://redmine.craws.net/issues/{{ issue_number }}"
-                        onclick="window.open(this.href); return false;">#{{ issue_number }}</a> {{ issue_text }}<br />
+                        &#8226 {{ issue_type|uc_first }}
+                        <a target="_blank" href="http://redmine.craws.net/issues/{{ issue_number }}">
+                            #{{ issue_number }}
+                        </a> {{ issue_text }}<br />
                     {% else %}
                         {{ issue_text|safe }}
                     {% endif %}
