--- a/openatlas/static/css/color.css
+++ b/openatlas/static/css/color.css
@@ -19,8 +19,7 @@ button,
 .button-bar a,
 .changelog-version,
 .inverse-heading,
-.tabs-container .ui-widget-content a.button,
-.tabs-container .ui-widget-content .buttonBar a,
+.tabs-container .ui-widget-content .button-bar a,
 .ui-widget-header,
 .ui-state-default a,
 .ui-state-default a:link,
