--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -23,7 +23,7 @@
     </p>
     <p>
         <strong>Daniel Kittel</strong>
-        <a href="http://craws.net" target="_blank">http://craws.net</a><br />
+        <a target="_blank" href="http://craws.net">http://craws.net</a><br />
         Quality Assurance
     </p>
     <h1>Funding</h1>
