--- a/openatlas/templates/settings/update.html
+++ b/openatlas/templates/settings/update.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="/settings">{{ _('settings')|uc_first }}</a> > {{ _('edit')|uc_first }}
+    <a href="{{ url_for('settings_index') }}">{{ _('settings')|uc_first }}</a> >
+    {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
     <form method="post">
