--- a/openatlas/templates/content/update.html
+++ b/openatlas/templates/content/update.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="/content">{{ _('content')|uc_first }}</a> >
-    <a href="/content/view/{{ item }}">{{ item|uc_first }}</a> >
+    <a href="{{ url_for('content_index') }}">{{ _('content')|uc_first }}</a> >
+    <a href="{{ url_for('content_view', item=item) }}">{{ item|uc_first }}</a> >
     {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
