--- a/openatlas/templates/model/class.html
+++ b/openatlas/templates/model/class.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}<a href="/model">{{ _('model')|uc_first }}</a> > {{ _('classes')|uc_first }}{% endblock %}
+{% block breadcrumb %}
+    <a href="{{ url_for('model_index') }}">{{ _('model')|uc_first }}</a> >
+    {{ _('classes')|uc_first }}
+{% endblock %}
 {% block content %}
     {{ table|pager|safe }}
 {% endblock %}
