--- a/openatlas/templates/model/class_view.html
+++ b/openatlas/templates/model/class_view.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="/model">{{ _('model')|uc_first }}</a> >
-    <a href="/model/class">{{ _('classes')|uc_first }}</a> >
+    <a href="{{ url_for('model_index') }}">{{ _('model')|uc_first }}</a> >
+    <a href="{{ url_for('class_index') }}">{{ _('classes')|uc_first }}</a> >
     {{ class_.code }}
 {% endblock %}
 {% block content %}
