--- a/openatlas/templates/model/index.html
+++ b/openatlas/templates/model/index.html
@@ -8,8 +8,9 @@
     </div>
     <div style="float:left;margin-left:1em;">
         <p>
-            {{ _('browse')|uc_first }}: <a href="/model/class">{{ _('classes')|uc_first }}</a>,
-            <a href="/model/property">{{ _('properties')|uc_first }}</a>
+            {{ _('browse')|uc_first }}:
+            <a href="{{ url_for('class_index') }}">{{ _('classes')|uc_first }}</a>,
+            <a href="{{ url_for('property_index') }}">{{ _('properties')|uc_first }}</a>
         </p>
         <p style="font-weight: bold;">{{ _('check for valid links')|uc_first }}</p>
         <form method="post">
