--- a/openatlas/templates/model/property_view.html
+++ b/openatlas/templates/model/property_view.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="/model">{{ _('model')|uc_first }}</a> >
-    <a href="/model/property">{{ _('properties')|uc_first }}</a> >
+    <a href="{{ url_for('model_index') }}">{{ _('model')|uc_first }}</a> >
+    <a href="{{ url_for('property_index') }}">{{ _('properties')|uc_first }}</a> >
     {{ property.code }}
 {% endblock %}
 {% block content %}
