--- a/openatlas/templates/source/form.html
+++ b/openatlas/templates/source/form.html
@@ -1,9 +1,10 @@
 {% set data = [
     {form.name.label|string + ' *': form.name(class_="required")},
-    {form.description.label: form.description},
-    {'': '<button type="submit">' + _('save')|uc_first + '</button>'}
 ] %}
 <form method="post">
     {{ form.csrf_token }}
     {{ data|data_table()|safe }}
+    {{ form.description.label }}<br />
+    {{ form.description }}<br />
+    <button type="submit">{{ _('insert')|uc_first }}</button>
 </form>
