--- a/openatlas/templates/source/index.html
+++ b/openatlas/templates/source/index.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('source')|uc_first }}{% endblock %}
 {% block content %}
-    <div class="button-bar"><a href="/source/insert/E33">+ {{ _('source')|uc_first }}</a></div>
+    <div class="button-bar">
+        <a href="{{ url_for('source_insert', code='E33') }}">+ {{ _('source')|uc_first }}</a>
+    </div>
     {{ tables['source']|pager|safe }}
 {% endblock %}
