--- a/openatlas/templates/source/insert.html
+++ b/openatlas/templates/source/insert.html
@@ -1,5 +1,7 @@
 {% extends 'layout.html' %}
-{% block breadcrumb %}<a href="/source/index">{{ _('source')|uc_first }}</a> > +{% endblock %}
+{% block breadcrumb %}
+     <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a> > +
+{% endblock %}
 {% block content %}
      {% include 'source/form.html' %}
 {% endblock %}
