--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -11,7 +11,8 @@
     <div id="tab-info">
         <div class="button-bar">
             <a href="{{ url_for('source_update', source_id=source.id) }}">{{ _('update')|uc_first }}</a>
-            <a href="{{ url_for('source_delete', source_id=source.id) }}">{{ _('delete')|uc_first }}</a>
+            <a onclick="return confirm('{{ _('delete')|uc_first }} {{ source.name.replace('\'', '') }}?')"
+               href="{{ url_for('source_delete', source_id=source.id) }}">{{ _('delete')|uc_first }}</a>
         </div>
         <h1>{{ source.name }}</h1>
         {% set data = [
