--- a/openatlas/templates/source/form.html
+++ b/openatlas/templates/source/form.html
@@ -7,8 +7,12 @@
     {{ data|data_table()|safe }}
     {{ form.description.label }}<br />
     {{ form.description }}<br />
-    <button type="submit">{{ _('insert')|uc_first }}</button>
-    <button type="submit" onclick="$('#continue_').val('yes');$('#source-form').submit();return false;">
-        {{ _('insert and continue')|uc_first }}
-    </button>
+    {% if not source %}
+        <button type="submit">{{ _('insert')|uc_first }}</button>
+        <button type="submit" onclick="$('#continue_').val('yes');$('#source-form').submit();return false;">
+            {{ _('insert and continue')|uc_first }}
+        </button>
+    {% else %}
+        <button type="submit">{{ _('save')|uc_first }}</button>
+    {% endif %}
 </form>
