--- a/openatlas/templates/place/index.html
+++ b/openatlas/templates/place/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ _('source')|uc_first }}{% endblock %}
+{% block breadcrumb %}{{ _('place')|uc_first }}{% endblock %}
 {% block content %}
 
 {% endblock %}
