--- a/openatlas/templates/source/insert.html
+++ b/openatlas/templates/source/insert.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
-     <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a> > +
+     <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a> > + {{ _('source')|uc_first }}
 {% endblock %}
 {% block content %}
      {% include 'source/form.html' %}
