--- a/openatlas/templates/actor/index.html
+++ b/openatlas/templates/actor/index.html
@@ -1,5 +1,10 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('actor')|uc_first }}{% endblock %}
 {% block content %}
-
+    <div class="button-bar">
+        <a href="{{ url_for('actor_insert', code='E21') }}">+ {{ 'E21'|get_class_name }}</a>
+        <a href="{{ url_for('actor_insert', code='E74') }}">+ {{ 'E74'|get_class_name }}</a>
+        <a href="{{ url_for('actor_insert', code='E40') }}">+ {{ 'E40'|get_class_name }}</a>
+    </div>
+    {{ tables['actor']|pager|safe }}
 {% endblock %}
